--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "everything": "npm run commit && npm run push",
     "logout": "heroku logout",
     "login": "heroku login -i",
-    "connect": "heroku git:remote -a tarn-sav",
+    "connect": "heroku git:remote -a sav-tarn",
     "refresh": "del /f package-lock.json && npm install",
     "hlog:": "heroku logs --tail"
   },
